--- a/webapp/src/components/timeline/Timeline.scss
+++ b/webapp/src/components/timeline/Timeline.scss
@@ -1,1 +1,9 @@
-.timeline {}
+.events {
+  &__item{
+    display: inline-block;
+    padding: 2px;
+    border: 1px solid #CCC;
+    margin:2px;
+    font-size:11px;
+  }
+}
