--- a/webapp/src/index.scss
+++ b/webapp/src/index.scss
@@ -1,3 +1,11 @@
+// @import "~foundation-sites/scss/foundation";
+// @include foundation-everything;
+// @include foundation-global-styles;
+// @include foundation-grid;
+// @include foundation-typography;
+// @include foundation-button;
+// @include foundation-forms;
+
 body {
   margin: 0;
   padding: 0;
