--- a/webapp/src/components/timeline/Timeline.scss
+++ b/webapp/src/components/timeline/Timeline.scss
@@ -1,9 +1,14 @@
-.events {
-  &__item{
-    display: inline-block;
-    padding: 2px;
-    border: 1px solid #CCC;
-    margin:2px;
-    font-size:11px;
+.events { }
+
+.event{
+  display: inline-block;
+  padding: 10px;
+  border: 1px solid #CCC;
+  border-radius: 3px;
+  margin:2px;
+  font-size:11px;
+
+  &__date{
+    font-weight: bold;
   }
 }
