--- a/webapp/src/components/timeline/Timeline.scss
+++ b/webapp/src/components/timeline/Timeline.scss
@@ -1,5 +1,3 @@
-.events { }
-
 .event{
   display: inline-block;
   padding: 10px;
@@ -9,6 +7,14 @@
   font-size:11px;
 
   &__date{
+    font-weight: bold;
+  }
+
+  &__label{
+    background-color: cadetblue;
+    color:#282c34;
+    border-radius: 3px;
+    padding: 3px;
     font-weight: bold;
   }
 }
