--- a/webapp/src/components/App.scss
+++ b/webapp/src/components/App.scss
@@ -1,7 +1,7 @@
-$red: #833;
+@import '../assets/styles/variables';
 
 .App {
-   background-color: #282c34;
+  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
