feat(webapp): add color to timeline

--- a/webapp/src/components/App.scss
+++ b/webapp/src/components/App.scss
@@ -3,13 +3,32 @@
 .App {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   color: white;
 }
 
+.forms{
+  position:absolute;
+  top:0;
+  right:0;
+
+  .form-wrapper{
+    padding: 15px;
+    font-size:12px;
+    label{
+      display: inline-block;
+      min-width: 100px;
+    }
+    input{
+      min-width: 150px;
+    }
+    button{
+      display: inline-block;
+      margin-top: 15px;
+    }
+  }
+}
 
 // Form
 input.error {
@@ -17,7 +36,7 @@ input.error {
 }
 
 .input-feedback {
-    color: $red;
-    margin-top: .25rem;
-    font-size:10px;
-  }
+  color: $red;
+  margin-top: .25rem;
+  font-size:10px;
+}
