--- a/webapp/src/components/nav/timelines/NavTimelines.scss
+++ b/webapp/src/components/nav/timelines/NavTimelines.scss
@@ -5,7 +5,7 @@
   padding:15px;
 }
 
-.nav__toggle{
+.toggle{
   font-size:11px;
   font-weight: bold;
   border: 1px solid rgba(255, 255, 255, 0);
@@ -18,6 +18,11 @@
     border-color:#FFF;
     border: 1px solid rgba(255, 255, 255, 0.5);
     //color:#282c34;
+  }
+
+  &__count{
+    display: inline-block;
+    opacity: .5;
   }
 }
 
