--- a/webapp/src/components/App.scss
+++ b/webapp/src/components/App.scss
@@ -5,3 +5,11 @@
   color: white;
 }
 
+.timeline-dot{
+  width:7px;
+  height:7px;
+  margin-right: 4px;
+  border-radius:50%;
+  background-color: #FFF;
+  display: inline-block;
+}
