--- a/webapp/src/components/nav/timelines/NavTimelines.scss
+++ b/webapp/src/components/nav/timelines/NavTimelines.scss
@@ -1,11 +1,11 @@
-@import '../../../assets/styles/variables';
-
 .nav__timelines{
-
   padding:15px;
 }
 
+.nav__timeline{}
+
 .toggle{
+  display: inline-block;
   font-size:11px;
   font-weight: bold;
   border: 1px solid rgba(255, 255, 255, 0);
@@ -17,7 +17,6 @@
   &--selected{
     border-color:#FFF;
     border: 1px solid rgba(255, 255, 255, 0.5);
-    //color:#282c34;
   }
 
   &__count{
@@ -26,11 +25,3 @@
   }
 }
 
-.timeline-dot{
-  width:7px;
-  height:7px;
-  margin-right: 4px;
-  border-radius:50%;
-  background-color: #FFF;
-  display: inline-block;
-}
