--- a/webapp/src/components/App.scss
+++ b/webapp/src/components/App.scss
@@ -1,6 +1,9 @@
 .App {
   background-color: #282c34;
-  min-height: 100vh;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
   display: flex;
   color: white;
 }
