--- a/webapp/src/components/timeline/Timeline.scss
+++ b/webapp/src/components/timeline/Timeline.scss
@@ -19,11 +19,22 @@
   &__date{
     font-weight: bold;
     margin: 5px 0;
-    font-size: 18px;
     margin-right:10px;
     display: inline-block;
-    width:70px;
+    width:90px;
     text-align: right;
+
+    .year{
+      font-size: 20px;
+    }
+    .month{
+      font-size: 14px;
+      opacity: .7;
+    }
+    .day{
+      font-size: 14px;
+      opacity: .4;
+    }
   }
 
   &__label{
