feat(webapp): group events by time units (year, month, day)

--- a/webapp/src/components/App.scss
+++ b/webapp/src/components/App.scss
@@ -9,10 +9,11 @@
 }
 
 .timeline-dot{
-  width:7px;
-  height:7px;
+  width:9px;
+  height:9px;
   margin-right: 4px;
   border-radius:50%;
   background-color: #FFF;
   display: inline-block;
+  border: 1px solid #000
 }
