feat(webapp): add drawer material layout

--- a/webapp/src/components/detail/DetailEvent.scss
+++ b/webapp/src/components/detail/DetailEvent.scss
@@ -1,5 +1,5 @@
 .detail-event{
   width:30%;
-  border-left:1px solid #ffffff;
   padding:20px;
+  background: darken($color: #282c34, $amount: 3)
 }
