feat(webapp): handle mobile

--- a/webapp/src/components/nav/timelines/NavTimelines.scss
+++ b/webapp/src/components/nav/timelines/NavTimelines.scss
@@ -1,9 +1,12 @@
 .nav__timelines{
   padding:15px;
+  overflow: auto;
+  max-height: 100%;
+  
 }
 
 .nav__timeline{
-  display: flex
+  display: flex;
 }
 
 .toggle{
