--- a/webapp/src/components/App.scss
+++ b/webapp/src/components/App.scss
@@ -17,3 +17,10 @@
   display: inline-block;
   border: 1px solid #000
 }
+
+.nav-drawer{
+  background-color: #282c34;
+  display: flex;
+  flex-direction: column;
+  padding-top: 15px;
+}
