feat(webapp): login, logout, register & initStore

--- a/webapp/src/components/App.scss
+++ b/webapp/src/components/App.scss
@@ -25,3 +25,12 @@
   padding-top: 15px;
 }
 
+.nav__user{
+  text-align: center;
+  margin-bottom:15px;
+}
+
+.nav__logout{
+  padding: 15px;
+  padding-top: 0px;
+}
