--- a/webapp/src/components/ui/forms/Form.scss
+++ b/webapp/src/components/ui/forms/Form.scss
@@ -15,4 +15,11 @@
     margin:30px 0 0 0;
     text-align: right;
   }
+
+  &__errors{
+    font-size: 0.8em;
+    color:red;
+    text-align: right;
+    margin-top: 15px;
+  }
 }
